--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
     />
-    <title>Extrator de Dados de PDF</title>
+    <title>Automatizador de CI</title>
     <script>
       function addItem() {
         const itemContainer = document.getElementById("items");
@@ -15,11 +15,11 @@
         itemDiv.classList.add("item");
 
         itemDiv.innerHTML = `
-                <input type="text" name="quantidade[]" placeholder="Quantidade" required />
-                <input type="text" name="descricao[]" placeholder="Descrição" required />
-                <input type="text" name="preco[]" placeholder="Preço" required />
-                <button type="button" onclick="removeItem(this)">Remover</button>
-            `;
+          <input type="text" name="quantidade[]" placeholder="Quantidade" required />
+          <input type="text" name="descricao[]" placeholder="Descrição" required />
+          <input type="text" name="preco[]" placeholder="Preço" required />
+          <button type="button" onclick="removeItem(this)">Remover</button>
+        `;
         itemContainer.appendChild(itemDiv);
       }
 
@@ -31,64 +31,73 @@
   </head>
   <body>
     <div class="container">
-      <h1>Extrator de Dados de PDF</h1>
+      <h1>Automatizador de CI</h1>
       <form method="POST" enctype="multipart/form-data">
         <input type="file" name="file" accept=".pdf" required />
         <button type="submit">Carregar PDF</button>
       </form>
+
       {% if data %}
       <h2>Processo concluído:</h2>
       <form method="POST" action="{{ url_for('gerar_ci') }}">
-        <div class="form-data">
-          <p>Código Requisição:</p>
-          <input
-            type="text"
-            name="codigo_requisicao"
-            value="{{ data['codigo_requisicao'] }}"
-          />
+        <!-- Grid com 3 colunas por linha -->
+        <div class="grid-container">
+          <div class="grid-item">
+            <label for="codigo_requisicao">Código Requisição:</label>
+            <input
+              type="text"
+              name="codigo_requisicao"
+              value="{{ data['codigo_requisicao'] }}"
+            />
+          </div>
+          <div class="grid-item">
+            <label for="solicitante">Solicitante:</label>
+            <input
+              type="text"
+              name="solicitante"
+              value="{{ data['solicitante'] }}"
+            />
+          </div>
+          <div class="grid-item">
+            <label for="local_entrega">Local de Entrega:</label>
+            <input
+              type="text"
+              name="local_entrega"
+              value="{{ data['local_entrega'] }}"
+            />
+          </div>
+          <div class="grid-item">
+            <label for="cod_arq">Código do Arquivo:</label>
+            <input type="text" name="cod_arq" placeholder="Código do Arquivo" />
+          </div>
+          <div class="grid-item">
+            <label for="data">Data:</label>
+            <input type="text" name="data" placeholder="04 de outubro" />
+          </div>
+          <div class="grid-item">
+            <label for="valor_total">Valor Total:</label>
+            <input
+              type="text"
+              name="valor_total"
+              value="{{ data['valor_total'] }}"
+            />
+          </div>
         </div>
+
+        <!-- Justificativa e Motivo em linhas completas -->
         <div class="form-data">
-          <p>Solicitante:</p>
-          <input
-            type="text"
-            name="solicitante"
-            value="{{ data['solicitante'] }}"
-          />
-        </div>
-        <div class="form-data">
-          <p>Local de Entrega:</p>
-          <input
-            type="text"
-            name="local_entrega"
-            value="{{ data['local_entrega'] }}"
-          />
-        </div>
-        <div class="form-data">
-          <p>Código do arquivo:</p>
-          <input name="cod_arq" placeholder="Código do arquivo" />
-        </div>
-        <div class="form-data">
-          <p>Data:</p>
-          <input name="data" placeholder="04 de outubro" />
-        </div>
-        <div class="form-data">
-          <p>Justificativa:</p>
+          <label for="justificativa">Justificativa:</label>
           <textarea name="justificativa">{{ data['justificativa'] }}</textarea>
         </div>
+
         <div class="form-data">
-          <p>Motivo:</p>
+          <label for="motivo">Motivo:</label>
           <textarea name="motivo" placeholder="Motivo"></textarea>
         </div>
+
+        <!-- Nome do Arquivo -->
         <div class="form-data">
-          <p>Valor Total:</p>
-          <input
-            type="text"
-            name="valor_total"
-            value="{{ data['valor_total'] }}"
-          />
-        </div>
-        <div class="form-data">
-          <p>Nome do arquivo:</p>
+          <label for="name_file">Nome do Arquivo:</label>
           <input
             class="large-input"
             type="text"
@@ -97,6 +106,7 @@
           />
         </div>
 
+        <!-- Itens -->
         <h3>Itens:</h3>
         <div id="items">
           {% for item in data['itens'] %}
@@ -119,14 +129,12 @@
           {% endfor %}
         </div>
         <button type="button" onclick="addItem()">Adicionar Item</button>
-
         <button type="submit">Gerar CI</button>
       </form>
-      <h3>Visualização da Requisição:</h3>
+
+      <!-- Iframe para visualizar o PDF -->
       <iframe
         src="{{ url_for('upload_file', filename=pdf_filename) }}"
-        width="100%"
-        height="600px"
       ></iframe>
       {% endif %}
     </div>
