add new template

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,14 @@
               value="{{ data['valor_total'] }}"
             />
           </div>
+          <div class="grid-item">
+            <label for="valor_total">Empresa:</label>
+            <input
+              type="text"
+              name="empresa"
+              value="{{ data['empresa'] }}"
+            />
+          </div>
         </div>
 
         <!-- Justificativa e Motivo em linhas completas -->
